Fixed z-index

--- a/css/styles.css
+++ b/css/styles.css
@@ -237,7 +237,7 @@ img {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 9999;
+    z-index: 999;
     text-align: center;
     font-size: 30px;
     font-weight: bold;
